--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:postgresql://localhost:5432/estudantes
+db.url=jdbc:postgresql://localhost:5432/escola
 db.username=postgres
-db.password=password
+db.password=postgres
